# firecracker-vsock-playground

./: .gitignore  Cargo.toml  README.md
guest-runner/: Cargo.toml
guest-runner/src/: main.rs
host-controller/: Cargo.toml
host-controller/src/: main.rs
lib/proto/: Cargo.toml  build.rs  processor.proto
lib/proto/src/: lib.rs
tooling/: build.sh  fc-config.json  run.sh  send-request.sh
tooling/docker/: build.sh  guest-runner-init-script
